// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat endpoint returns error message if payload values are invalid 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "chatName",
      "message": "Chat name must be a non-empty string.",
    },
    Object {
      "field": "message",
      "message": "Chat message must be a non-empty string.",
    },
    Object {
      "field": "userIDs",
      "message": "The provided userIDs value is invalid.",
    },
  ],
  "type": "chat",
}
`;

exports[`Chat endpoint returns error message if payload values are invalid 2`] = `
Object {
  "errors": Array [
    Object {
      "field": "chatName",
      "message": "Chat name must be a non-empty string.",
    },
    Object {
      "field": "message",
      "message": "Chat message must be a non-empty string.",
    },
  ],
  "type": "chat",
}
`;

exports[`Chat endpoint returns error message if payload values are invalid 3`] = `
Object {
  "errors": Array [
    Object {
      "field": "message",
      "message": "Chat message must be a non-empty string.",
    },
  ],
  "type": "chat",
}
`;
